--- a/src/components/atoms/SideMenu/style.scss
+++ b/src/components/atoms/SideMenu/style.scss
@@ -16,7 +16,11 @@
     transition: 0.1s ease-in-out background-color;
 
     &:hover {
-      background-color: $fog;
+      background-color: rgba(233, 232, 232, 0.5);
     }
+  }
+
+  .side-menu__icon--active {
+    background-color: rgba(233, 232, 232, 0.5);
   }
 }
