--- a/src/components/molecules/SelectForm/style.scss
+++ b/src/components/molecules/SelectForm/style.scss
@@ -1,11 +1,10 @@
 .select-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 1em 1.5em;
+  padding: 1em;
+  gap: 1em;
 
-  width: 16em;
-  height: 25em;
+  width: 18em;
 
   @include border;
 
