feat: TagsDropdown and Checkbox components

--- a/src/components/atoms/AiSection/style.scss
+++ b/src/components/atoms/AiSection/style.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
-  padding: 1em 0;
-  border-top: 1px solid $fog;
+  padding-bottom: 1em;
   border-bottom: 1px solid $fog;
 
   .ai-section__header,
