--- a/src/components/molecules/TagsDropdown/style.scss
+++ b/src/components/molecules/TagsDropdown/style.scss
@@ -10,6 +10,11 @@
       border: none;
       outline: none;
     }
+
+    .tags-dropdown__search--clear {
+      margin-left: auto;
+      cursor: pointer;
+    }
   }
 
   .tags-dropdown__options {
@@ -18,6 +23,7 @@
     gap: 0.25em;
     padding: 0.5em 0;
     background-color: white;
+    min-height: 20em;
     max-height: 20em;
     overflow-y: auto;
 
@@ -44,6 +50,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-top: auto;
 
       padding: 0.75em 1em;
       color: white;
