--- a/src/components/atoms/AiSection/style.scss
+++ b/src/components/atoms/AiSection/style.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
-  padding-bottom: 1em;
+  padding: 0.75em 0 1.2em;
   border-bottom: 1px solid $fog;
 
   .ai-section__header,
