--- a/src/components/organisms/TagForm/style.scss
+++ b/src/components/organisms/TagForm/style.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   padding: 1em 0.75em;
-  gap: 1em;
+  gap: 0.5em;
 
   width: 18em;
 
@@ -22,6 +22,8 @@
   .tags-form__selected-tags {
     display: flex;
     flex-wrap: wrap;
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid $fog;
 
     .selected-tag {
       display: flex;
